# rest-api-shared

./: Cargo.toml  README.md
src/: get_lang_id.rs  lang_id.rs  lib.rs
src/authorisation/: get_client_id.rs
src/authorization/: get_client_id.rs
src/http_fields/: key_value_key.rs  mod.rs  validation_error.rs
src/middlewares/: auth_fail_response.rs  auth_fail_response_factory.rs  auth_middleware.rs  invalid_token_model.rs  is_alive_middleware.rs  mod.rs  request_creds.rs  session_entity.rs
src/request_extensions/: mod.rs  request_ext.rs
src/request_extentions/: request_ext.rs
src/session_token/: mod.rs  session_token.rs  token_key.rs
src/shared_contracts/: result_status.rs
