[package]
name = "rest-api-shared"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-controllers = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
encryption = { branch = "0.1.1", git = "https://github.com/ReachPay/encryption.git" }

async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
signal-hook = "*"
prost-types = "*"
base64 = "*"


serde_json = "*"
serde_repr = "*"
