[package]
name = "rest-api-shared"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-controllers = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
encryption = { tag = "0.1.1", git = "https://github.com/ReachPay/encryption.git" }

async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
signal-hook = "*"
prost-types = "*"
base64 = "*"


serde_json = "*"
serde_repr = "*"
