[package]
name = "rest-api-shared"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
auth-middleware = ["service-sdk/my-nosql-data-reader-sdk"]

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-sdk",
    "macros",

] }

encryption = { tag = "0.1.1", git = "https://github.com/ReachPay/encryption.git" }

serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"

async-trait = "*"
prost = "*"
